--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>French Poem</title>
-    <link rel="stylesheet" href="./src/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./src/style.css" />
+  </head>
+  <body>
     <h1>Al french peom website</h1>
-    <footer>code by <a href="#">constancia Matsimbi</a>,open source on <a href="#">GitHub</a>live on <a href="#">netlify</a></footer>
-    
+    <footer>
+      code by <a href="https://github.com/HappinessGR">constancia Matsimbi</a>,open source on
+      <a href="https://github.com/HappinessGR/french-peom.git">GitHub</a>live on <a href="https://bejewelled-fudge-68617c.netlify.app/">netlify</a>
+    </footer>
 
     <script src="./src/index.js"></script>
-</body>
+  </body>
 </html>
