--- a/index.html
+++ b/index.html
@@ -7,9 +7,26 @@
     <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
-    <h1>Al french peom website</h1>
+    <header>
+        <h1>Al french peom website</h1>
+    </header>
+    <main>
+        <div>
+            <form >
+                <input type="text" placeholder="Enter the french peom title" required autocomplete="off">
+                <input type="submit"  id="">
+            </form>
+        </div>
+
+<p>Demain, dès l’aube, à l’heure où
+    <br>
+blanchit la campagne,
+
+</p>
+
+    </main>
     <footer>
-      code by <a href="https://github.com/HappinessGR">constancia Matsimbi</a>,open source on
+     AI french Peom code by <a href="https://github.com/HappinessGR">constancia Matsimbi</a>,open source on
       <a href="https://github.com/HappinessGR/french-peom.git">GitHub</a>live on <a href="https://bejewelled-fudge-68617c.netlify.app/">netlify</a>
     </footer>
 
