--- a/index.html
+++ b/index.html
@@ -7,24 +7,25 @@
     <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
+    <div class="container">
     <header>
         <h1>Al french peom website</h1>
     </header>
     <main>
         <div>
             <form >
-                <input type="text" placeholder="Enter the french peom title" required autocomplete="off">
-                <input type="submit"  id="">
+                <input type="text" placeholder="Enter the french peom title" required autocomplete="off" class="instruction">
+                <input type="submit" class="submit-button" id="">
             </form>
         </div>
-
+<div class="peom">
 <p>Demain, dès l’aube, à l’heure où
     <br>
 blanchit la campagne,
 
 </p>
-
-    </main>
+</div>
+    </main></div>
     <footer>
      AI french Peom code by <a href="https://github.com/HappinessGR">constancia Matsimbi</a>,open source on
       <a href="https://github.com/HappinessGR/french-peom.git">GitHub</a>live on <a href="https://bejewelled-fudge-68617c.netlify.app/">netlify</a>
