added id on the form

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <body>
     <div class="container">
     <header>
-        <h1>Al french peom website</h1>
+        <h1>Al French Peom Website</h1>
     </header>
     <main>
         <div>
-            <form >
-                <input type="text" placeholder="Enter the french peom title" required autocomplete="off" class="instruction">
+            <form  id="peom-genetor">
+                <input type="text" placeholder="Enter the french peom title" required autocomplete="off" class="instruction"  id="input-form">
                 <input type="submit" class="submit-button" id="">
             </form>
         </div>
-<div class="peom">
+<div class="peom" id="peom">
 <p>Demain, dès l’aube, à l’heure où
     <br>
 blanchit la campagne,
