--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>French Poem</title>
     <link rel="stylesheet" href="./src/style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   </head>
   <body>
     <div class="container">
     <header>
-        <h1>Al French Peom Website</h1>
+        <h1>Al French Poem Website</h1>
     </header>
     <main>
         <div>
@@ -18,10 +21,10 @@
                 <input type="submit" class="submit-button" id="">
             </form>
         </div>
-<div class="peom" id="peom">
-<p>Demain, dès l’aube, à l’heure où
+<div class="peom" id="poem">
+<p>
     <br>
-blanchit la campagne,
+
 
 </p>
 </div>
