--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
         <h1>Al French Poem Website</h1>
     </header>
     <main>
-        <div>
+        <div class="form-container">
             <form  id="peom-genetor">
                 <input type="text" placeholder="Enter the french peom title" required autocomplete="off" class="instruction"  id="input-form">
                 <input type="submit" class="submit-button" id="">
             </form>
+            <div class="hint">i.e flower,book,paris and etc</div>
         </div>
-<div class="peom" id="poem">
+<div class="peom hidden" id="poem">
 <p>
     <br>
 
@@ -31,7 +32,7 @@
     </main></div>
     <footer>
      AI french Peom code by <a href="https://github.com/HappinessGR">constancia Matsimbi</a>,open source on
-      <a href="https://github.com/HappinessGR/french-peom.git">GitHub</a>live on <a href="https://bejewelled-fudge-68617c.netlify.app/">netlify</a>
+      <a href="https://github.com/HappinessGR/french-peom.git">GitHub</a> live on <a href="https://bejewelled-fudge-68617c.netlify.app/">netlify</a>
     </footer>
 
     <script src="./src/index.js"></script>
